# serializer version: 1
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_battery:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.ozmo_950_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'E1234567890000000001_battery_level',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_battery:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'Ozmo 950 Battery',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ozmo_950_battery',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_brush_lifetime:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.ozmo_950_brush_lifetime',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Brush lifetime',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'life_span_brush_lifetime',
    'unique_id': 'E1234567890000000001_life_span_brush_lifetime',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_brush_lifetime:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Brush lifetime',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ozmo_950_brush_lifetime',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '80',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_brush_remaining:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.ozmo_950_brush_remaining',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Brush remaining',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'life_span_brush_remaining',
    'unique_id': 'E1234567890000000001_life_span_brush_remaining',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_brush_remaining:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Brush remaining',
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ozmo_950_brush_remaining',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '3600',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_filter_lifetime:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.ozmo_950_filter_lifetime',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Filter lifetime',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'life_span_filter_lifetime',
    'unique_id': 'E1234567890000000001_life_span_filter_lifetime',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_filter_lifetime:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Filter lifetime',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ozmo_950_filter_lifetime',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '56',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_filter_remaining:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.ozmo_950_filter_remaining',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Filter remaining',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'life_span_filter_remaining',
    'unique_id': 'E1234567890000000001_life_span_filter_remaining',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_filter_remaining:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Filter remaining',
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ozmo_950_filter_remaining',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '2400',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_ip_address:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.ozmo_950_ip_address',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'IP address',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'wifi_ip',
    'unique_id': 'E1234567890000000001_wifi_ip',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_ip_address:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 IP address',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ozmo_950_ip_address',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '192.168.0.10',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_last_error:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.ozmo_950_last_error',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Last error',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'last_error',
    'unique_id': 'E1234567890000000001_last_error',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_last_error:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'description': 'NoError: Robot is operational',
      'friendly_name': 'Ozmo 950 Last error',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ozmo_950_last_error',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_side_brush_lifetime:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.ozmo_950_side_brush_lifetime',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Side brush lifetime',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'life_span_side_brush_lifetime',
    'unique_id': 'E1234567890000000001_life_span_side_brush_lifetime',
    'unit_of_measurement': '%',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_side_brush_lifetime:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Side brush lifetime',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ozmo_950_side_brush_lifetime',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '40',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_side_brush_remaining:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.ozmo_950_side_brush_remaining',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Side brush remaining',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'life_span_side_brush_remaining',
    'unique_id': 'E1234567890000000001_life_span_side_brush_remaining',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_side_brush_remaining:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Side brush remaining',
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ozmo_950_side_brush_remaining',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '1200',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_stats_area:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ozmo_950_stats_area',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stats area',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'stats_area',
    'unique_id': 'E1234567890000000001_stats_area',
    'unit_of_measurement': 'm²',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_stats_area:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Stats area',
      'unit_of_measurement': 'm²',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ozmo_950_stats_area',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '10',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_stats_time:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ozmo_950_stats_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stats time',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'stats_time',
    'unique_id': 'E1234567890000000001_stats_time',
    'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_stats_time:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Stats time',
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ozmo_950_stats_time',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '300',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_stats_total_area:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ozmo_950_stats_total_area',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stats total area',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'stats_total_area',
    'unique_id': 'E1234567890000000001_stats_total_area',
    'unit_of_measurement': 'm²',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_stats_total_area:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Stats total area',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': 'm²',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ozmo_950_stats_total_area',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '60',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_stats_total_cleanings:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ozmo_950_stats_total_cleanings',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stats total cleanings',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'stats_total_cleanings',
    'unique_id': 'E1234567890000000001_stats_total_cleanings',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_stats_total_cleanings:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Stats total cleanings',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ozmo_950_stats_total_cleanings',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '123',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_stats_total_time:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ozmo_950_stats_total_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
      'sensor.private': dict({
        'suggested_unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stats total time',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'stats_total_time',
    'unique_id': 'E1234567890000000001_stats_total_time',
    'unit_of_measurement': <UnitOfTime.HOURS: 'h'>,
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_stats_total_time:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Stats total time',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ozmo_950_stats_total_time',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '144000',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_wi_fi_rssi:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.ozmo_950_wi_fi_rssi',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Wi-Fi RSSI',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'wifi_rssi',
    'unique_id': 'E1234567890000000001_wifi_rssi',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_wi_fi_rssi:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Wi-Fi RSSI',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ozmo_950_wi_fi_rssi',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': '-62',
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_wi_fi_ssid:entity-registry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.ozmo_950_wi_fi_ssid',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Wi-Fi SSID',
    'platform': 'ecovacs',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'wifi_ssid',
    'unique_id': 'E1234567890000000001_wifi_ssid',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[yna5x1-entity_ids0][sensor.ozmo_950_wi_fi_ssid:state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ozmo 950 Wi-Fi SSID',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ozmo_950_wi_fi_ssid',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'Testnetwork',
  })
# ---
